objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Solutions_Architect__c</fullName>
        <formula>Account_Name__r.Solution_Architect__r.Full_Name__c</formula>
        <label>Solutions Architect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Months__c</fullName>
        <formula>IF(IsNull(etl_subscription_start_date__c ),null,
 CEILING(etl_subscription_end_date__c - etl_subscription_start_date__c ) / 30.416)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Months</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Project_Score__c</fullName>
        <label>Total Project Score</label>
        <summarizedField>Project_User__c.User_Score__c</summarizedField>
        <summaryForeignKey>Project_User__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Backend_Company_name__c</fullName>
        <label>Backend Company name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chartmogul_Plan_Type__c</fullName>
        <formula>If( Current_Backend_Stage__c = &quot;Active Contract&quot; || Current_Backend_Stage__c = &quot;Active Subscription&quot; ||  ARR_New__c  &gt;0, 
If(Contains(  Chartmogul_Type_Hidden__c  , &quot;Business&quot;),&quot;Business&quot;,&quot;&quot;) &amp;
If(Contains(  Chartmogul_Type_Hidden__c  , &quot;Enterprise&quot;),&quot;Enterprise&quot;,&quot;&quot;) &amp;
If(Contains( Chartmogul_Type_Hidden__c , &quot;Scaling&quot;),&quot;Enterprise&quot;,&quot;&quot;) &amp;
If(Contains( Chartmogul_Type_Hidden__c  , &quot;Team&quot;),&quot;Team&quot;,&quot;&quot;) &amp;
If(Contains( Chartmogul_Type_Hidden__c  , &quot;Startup&quot;),&quot;Team&quot;,&quot;&quot;) &amp;
If(Contains(Chartmogul_Type_Hidden__c  , &quot;Individual&quot;),&quot;Individual&quot;,&quot;&quot;) &amp;
If(Contains(Chartmogul_Type_Hidden__c  , &quot;Pro&quot;),&quot;Pro&quot;,&quot;&quot;) &amp;
If(Contains(Chartmogul_Type_Hidden__c  , &quot;Scale&quot;),&quot;Scale&quot;,&quot;&quot;) &amp;
If(Contains(Chartmogul_Type_Hidden__c  , &quot;Essentials&quot;),&quot;Essentials&quot;,&quot;&quot;) &amp;
If(Contains( Chartmogul_Type_Hidden__c , &quot;New idea&quot;),&quot;Individual&quot;,&quot;&quot;) &amp;
If(Contains( Chartmogul_Type_Hidden__c , &quot;New Idea&quot;),&quot;Individual&quot;,&quot;&quot;) &amp;
If(Chartmogul_Type_Hidden__c = &quot;&quot;, &quot;Missing&quot;,&quot;&quot;)

,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Looks at chartmogul plan text and decided on the plan category</inlineHelpText>
        <label>Chartmogul Plan Type_Delete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Project_Makers__c</fullName>
        <description>Number of active makers on child projects</description>
        <inlineHelpText>Number of active makers on child projects</inlineHelpText>
        <label>Child Project Makers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ETL_Subscription_End__c</fullName>
        <label>ETL Subscription End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Services_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked if a related Opportunity contains a Services SKU</description>
        <inlineHelpText>Box is checked if a related Opportunity contains a Services SKU</inlineHelpText>
        <label>Has Services (Project)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vitally_Account_Plan__c</fullName>
        <label>Vitally Account Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vitally_Core_Actions__c</fullName>
        <label>Vitally Core Actions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Health_Score__c</fullName>
        <label>Vitally Health Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Next_Step_by__c</fullName>
        <label>Vitally Next Step by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>current_contributors__c</fullName>
        <formula>IF(
    or( 
        Current_Backend_Stage__c = &quot;Trial Expired&quot;, 
        Current_Backend_Stage__c = &quot;Deleted&quot;, 
        Current_Backend_Stage__c = &quot;Churned Customer&quot;),
    0,    
    contributors__c + viewers__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># current contributors_Delete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>customer_external_id__c</fullName>
        <label>customer_external_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Backend_Stage__c</fullName>
        <externalId>true</externalId>
        <label>Current Backend Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Cycle__c</fullName>
        <inlineHelpText>Current billing cycle, monthly, yearly, etc.</inlineHelpText>
        <label>Current Billing Cycle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Billing_Cycle__c</fullName>
        <label>Initial Billing Cycle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Acct_Opp_Acct__c</fullName>
        <formula>Account_ID__c =  Opportunity__r.Account.ID_Long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Account Same as Opportunity Account</inlineHelpText>
        <label>Project Acct = Opp Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date_Delete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vitally_CSM_Sentiment__c</fullName>
        <label>Vitally CSM Renewal Risk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chartmogul_Type_Hidden__c</fullName>
        <formula>IF(Isblank(Chartmogul_Plan__c ),
IF( IsNull(Parent_Project__c ),&quot;&quot;, Parent_Project__r.Chartmogul_Plan__c )

,Chartmogul_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field, takes chartmogul plan name from parent if blank</inlineHelpText>
        <label>Chartmogul Plan - Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETL_Subscription_Start__c</fullName>
        <label>ETL Subscription Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Opp_MK_Segment__c</fullName>
        <formula>Opportunity__r.Opportunity_MK_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Opp MK Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_contributors__c</fullName>
        <label>Number of contributors_Delete(Rollup)</label>
        <summaryFilterItems>
            <field>Project_User__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_User__c.Project_Role__c</field>
            <operation>equals</operation>
            <value>contributor</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_User__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Purchased_Contributors__c</fullName>
        <formula>IF( Current_Backend_Stage__c =&quot;Active Contract&quot;, Contracted_Contributors__c ,
   IF ( Current_Backend_Stage__c =&quot;Active Subscription&quot;, Project_makers__c ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for contracts the number is from contracted contributors, for subscriptions the # of makers used</inlineHelpText>
        <label>Purchased Contributors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Churn_Forecast__c</fullName>
        <label>Vitally Churn Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>makers_in_use_subspace__c</fullName>
        <formula>Project_makers__c +  Child_Project_Makers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total project makers in use across the project and child/subspace projects</inlineHelpText>
        <label># makers in use + subspace_HIDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name_User_Input__c</fullName>
        <description>company name sent by user when Project was created</description>
        <label>Company Name (User Input)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Contributors__c</fullName>
        <inlineHelpText># allowed contributors from manual contracts</inlineHelpText>
        <label>Contracted Contributors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_Time__c</fullName>
        <description>Formula field that references the Last Modified Date and turns it into date/time for reports/list views. Not on page layout, admin only field.</description>
        <formula>LastModifiedDate</formula>
        <label>Last Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Activation_Date__c</fullName>
        <label>Project Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date_Delete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vitally_AM_AE_Sentiment__c</fullName>
        <label>Vitally AM/AE Sentiment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Health_Category__c</fullName>
        <label>Vitally Health Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Lifecycle_Stage__c</fullName>
        <label>Vitally Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Lifecycle_Stage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitally_Renewal_Contact__c</fullName>
        <label>Vitally Renewal Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chartmogul_Billing_Cycle__c</fullName>
        <label>Chartmogul billing cycle Delete</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_admins_editors__c</fullName>
        <label>Number of admins/editors_Delete(Rollup)</label>
        <summaryFilterItems>
            <field>Project_User__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Project_User__c.Project_Role__c</field>
            <operation>equals</operation>
            <value>admin, editor</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_User__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vitally_Jira_Integration__c</fullName>
        <label>Vitally Jira Integration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Renewal_Forecast__c</fullName>
        <label>Vitally Renewal Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Renewal_Go_Ahead__c</fullName>
        <label>Vitally Renewal Go Ahead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Watchdog_Properly_Active__c</fullName>
        <formula>and(
Chartmogul_MRR__c &gt;0,
Status__c &lt;&gt; &quot;Paying&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Watchdog - Properly Active_Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Life_Cycle_Stage__c</fullName>
        <formula>Account_Name__r.Customer_Status__c</formula>
        <label>Customer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Roadmap_Activated__c</fullName>
        <label>Vitally Roadmap Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>etl_subscription_end_date__c</fullName>
        <label>ETL Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Business_Opportunities__c</fullName>
        <label># New Business Opportunities</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Insights_Activated__c</fullName>
        <label>Vitally Insights Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Strategy_Activated__c</fullName>
        <label>Vitally Strategy Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_of_Insights_Created__c</fullName>
        <label>Vitally # of Insights Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>etl_subscription_start_date__c</fullName>
        <label>ETL Subscription Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_from_Portal_to_Customer__c</fullName>
        <formula>datevalue( CreatedDate)- Account_Name__r.First_Opportunity_Won_Date__c</formula>
        <label>Days from Portal to Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_EOY_Review_Conducted__c</fullName>
        <label>Vitally EOY Review Conducted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Enterprise_Activated__c</fullName>
        <label>Vitally Enterprise Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_of_roadmap_views_L30__c</fullName>
        <label>Vitally # of roadmap views L30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_Foundations_Activated__c</fullName>
        <label>Vitally Foundations Activated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_SatisMeter_ProductLineItem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture the opp&apos;s SatisMeter checkbox. Populated for now by Rollup Helper. If one opp is TRUE for respective opp field, then this field will be TRUE also. Also potentially synced to Vitally</description>
        <label>Has SatisMeter ProductLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_User_Latest_Campaign_ID__c</fullName>
        <formula>Master_User_Contact__r.Latest_Campaign__r.Id</formula>
        <inlineHelpText>Latest Campaign of Master User Contact</inlineHelpText>
        <label>Master User Latest Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Updated_Date_Time__c</fullName>
        <inlineHelpText>The last time ARR, Subscription plan, purchased makers, etc updated</inlineHelpText>
        <label>Subscription Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vitally_AM_AE_Renewal_Go_Ahead__c</fullName>
        <label>Vitally AM/AE Renewal Go Ahead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_of_Makers_logged_in_L30__c</fullName>
        <label>Vitally % of Makers logged in L30</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hours_Since_Subscription_Updated__c</fullName>
        <formula>(Now() - Subscription_Updated_Date_Time__c )* 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Since Subscription Updated</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Opp_Same_Acct_as_Project__c</fullName>
        <formula>Account_Name__c =  Opportunity__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the initial opp attached to the same account as project?</inlineHelpText>
        <label>Initial Opp - Same Acct as Project?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vitally_Exclude_from_Round_Robin__c</fullName>
        <description>When contains &quot;2022move&quot; exclude from LeanData Round Robin</description>
        <inlineHelpText>When contains &quot;2022move&quot; exclude from LeanData Round Robin</inlineHelpText>
        <label>Vitally Exclude from Round Robin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vitally_Renewal_Forecast_Category__c</fullName>
        <label>Vitally Renewal Forecast Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>etl_subscription_reactivation_date__c</fullName>
        <label>ETL Subscription Reactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vitally_of_All_users_viewing_Roadmap__c</fullName>
        <label>Vitally % of All users viewing Roadmap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vitally_of_Contributors_Logged_in_L30__c</fullName>
        <label>Vitally % of Contributors Logged in L30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Trial_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Name__c</columns>
        <columns>ARR_New__c</columns>
        <columns>MRR__c</columns>
        <columns>Chartmogul_Status__c</columns>
        <columns>Active__c</columns>
        <columns>Chartmogul_Billing_Cycle__c</columns>
        <columns>Prior_Billing_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Internal_Spaces</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Master_User_Contact__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Trial_End_Date__c</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <label>Internal Spaces</label>
    </listViews>
    <listViews>
        <fullName>Nathan_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project_makers__c</columns>
        <columns>Customer_Life_Cycle_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner__c</field>
            <operation>contains</operation>
            <value>brown,jesus</value>
        </filters>
        <filters>
            <field>Customer_Life_Cycle_Stage__c</field>
            <operation>notEqual</operation>
            <value>1.0 Customer</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>Nathan Projects</label>
    </listViews>
    <listViews>
        <fullName>standalone_portal</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Trial_End_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Name__c</columns>
        <columns>ARR_New__c</columns>
        <columns>MRR__c</columns>
        <columns>Chartmogul_Status__c</columns>
        <columns>Active__c</columns>
        <columns>Chartmogul_Billing_Cycle__c</columns>
        <columns>Prior_Billing_Cycle__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Space_Type__c</field>
            <operation>equals</operation>
            <value>Standalone Portal</value>
        </filters>
        <label>standalone_portal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Could_be_VIPs_test</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Number_of_admins_editors__c</columns>
        <columns>Number_of_contributors__c</columns>
        <columns>Number_of_viewers__c</columns>
        <columns>Health_status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Name__c</field>
            <operation>notEqual</operation>
            <value>Scaling company</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>deleted</value>
        </filters>
        <filters>
            <field>Product_Name__c</field>
            <operation>notEqual</operation>
            <value>Trial</value>
        </filters>
        <filters>
            <field>Number_of_admins_editors__c</field>
            <operation>greaterOrEqual</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Number_of_viewers__c</field>
            <operation>greaterThan</operation>
            <value>40</value>
        </filters>
        <label>Potential CS VIPs</label>
    </listViews>
    <listViews>
        <fullName>Placeholder_Spaces</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Active__c</columns>
        <columns>Master_User_Contact__c</columns>
        <columns>Created_Date__c</columns>
        <columns>Trial_End_Date__c</columns>
        <columns>Product_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Backend_Stage__c</field>
            <operation>equals</operation>
            <value>Placeholder</value>
        </filters>
        <label>Placeholder Spaces</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>SatisMeter</fullName>
        <active>true</active>
        <label>SatisMeter</label>
    </recordTypes>
    <validationRules>
        <fullName>Do_Not_Change_Placeholder_Project</fullName>
        <active>true</active>
        <errorConditionFormula>Id = &quot;a00f400000RepfE&quot;&amp;&amp;
Not(IsPickVal($User.Team__c,&quot;RevOps&quot;))</errorConditionFormula>
        <errorMessage>Cannot update Placeholder Project</errorMessage>
    </validationRules>
</CustomObject>